# bastion-platform

./: .gitignore  README.md  docker-compose.yml  pom.xml
.github/workflows/: build-agent.yml
bastion-agent/: Cargo.toml  application.yml
bastion-agent/scripts/: install-agent.sh
bastion-agent/scripts/tests/: install-agent-download.test.sh
bastion-agent/src/: main.rs
bastion-server/: Dockerfile  pom.xml
bastion-server/scripts/: one-click-connect.sh
bastion-server/scripts/tests/: one-click-connect-test.sh
bastion-server/src/main/java/com/example/bastion/server/: BastionServerApplication.java
bastion-server/src/main/java/com/example/bastion/server/config/: ConnectionProperties.java  RegistryProperties.java
bastion-server/src/main/java/com/example/bastion/server/controller/: AgentController.java  ConnectionController.java
bastion-server/src/main/java/com/example/bastion/server/dto/: AgentHeartbeatRequest.java  AgentInfoResponse.java  AgentRegistrationRequest.java  AgentRegistrationResponse.java  OneClickConnectRequest.java  OneClickConnectResponse.java
bastion-server/src/main/java/com/example/bastion/server/model/: AgentNode.java  ConnectionToken.java
bastion-server/src/main/java/com/example/bastion/server/service/: AgentRegistryService.java  ConnectionTokenService.java
bastion-server/src/main/resources/: application.yml
bastion-server/src/test/java/com/example/bastion/server/controller/: AgentControllerTest.java  ConnectionControllerTest.java
bastion-server/src/test/java/com/example/bastion/server/service/: AgentRegistryServiceTest.java  (+1 more)
